--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 <div><img src="nelson_hello.jpg" alt="Hello World from Nelson"
 style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
-<p>A change to fix an error.</p>
-<p>A new line in our file!</p>
+<p>This line is here to show how merging works</p>
 <div><img src="hat-fail.jpg" alt="Hat Git" style="width:100%;max-width:640px"></div>
-
->>>>>>> hello-world-images
 
 </body>
 </html>
